Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Split up the finalizing method into several methods so they can be called
  during installation if necessary.
- Verifying of FlexibleTypes will now upgrade FactoryBased types, and
  set up actions, if defined.
- Changes in local workflow setup are not overridden.
- addTreeCacheTypes now takes lists for types and meta_types.
- verifyDirectories method to set up directories.
- Changed the Schema setup methods from addXxxx to verifyXxxx.
Bug fixes:
~~~~~~~~~~
- Fixed a bug in the local workflow setup.
- Various bugfixes.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-